--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <h1>Day One HW</h1>
         <h3>Minimum Requirements:</h3>
         <ul>
-          <li>Replace my info with yours (you may delete these instructions)</li>
+          <!-- <li>Replace my info with yours (you may delete these instructions)</li>
           <li>Save and push to your branch</li>
           <li>Open pull request</li>
           <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
+          <li>BONUS: You may style however you'd like</li> -->
         </ul>
       </div>
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Ryeker</h1>
+        <h1>Richard</h1>
       </div>
       <div class="col-md-9">
-        <h3>I started coming to Geekwise after my daughter was born and I realized that retail/food service was not where I wanted my future to go. That was in April of 2015, and now I am a full-time developer. It can happen for you too!</h3>
+        <h3>I'm a college student looking for a new skill to help me in my job search.  I am hoping by putting in a good amount of effort into web designing I could possibly make a career out of it.</h3>
       </div>
     </div>
   </div>
